mise à jours des options

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solutions de Transport et de Vente de matériaux de constructions</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">BIKERE, <span class="text-primary">Une centrale d'achats</span> innovante pour vos travaux de constructions</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2"> <span style="height: 35px;"> Assistance, Négoces, vente et transport de matériaux de constructions  pour les professionnels et les particuliers.</p></span>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
-                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis </a>
+                                <a href="materiaux.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
+                                <a href="quote.html" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis </a>
                             </div>
                         </div>
                     </div>
@@ -101,8 +101,8 @@
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solution de Transport et de Ventede matériaux de constructions</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Une centrale d'achats</span> innovante pour vos travaux de constructions</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Assistance, Négoces, vente et transport de matériaux de constructions pour les professionnels et les particuliers.</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
-                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis</a>
+                                <a href="transport.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
+                                <a href="quote.html" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis</a>
                             </div>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                 <div class="col-lg-6 about-text wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="text-secondary text-uppercase mb-3">A Propos de nous</h6>
                     <h1 class="mb-5">NOUS SOMMES A VOS CÔTES POUR TOUS VOS CHANTIERS DE BTP !</h1>
-                    <p class="mb-5">Vous êtes à la recherche d’une entreprise pour la vente, la livraison de sable et de granulats, de ciment, 
+                    <p class="mb-5" style="text-align: justify;">Vous êtes à la recherche d’une entreprise pour la vente, la livraison de sable et de granulats, de ciment, 
                         des travaux d'ornement ou de constructions au Gabon ? <br> Notre entreprise vous propose du sable, du ciment  et d'autres matériaux adaptés à vos besoins à des coûts attractifs. <br><br>
                     <strong style="color: blue;">Les défis d’une entreprise innovante : notre société est à votre service depuis 2023 et réinvente la vente et la distribution des matériaux de ss dans la province ! </strong> <br><br>
                         Notre organisation est composée d’une dizaine de partenaires  pour un accompagnement optimal dans vos commandes et sur vos chantiers. <br> 
@@ -143,7 +143,7 @@
                             <p class="m-0">Rapidité du traitement de la commande et livraison à temps tout prêt de chez vous sont notre force</p>
                         </div>
                     </div>
-                    <a href="" class="btn btn-primary py-3 px-5">En savoir plus</a>
+                    <a href="livraison.html" class="btn btn-primary py-3 px-5">En savoir plus</a>
                 </div>
             </div>
         </div>
@@ -213,8 +213,8 @@
                         <p>Nous vous fournissons deux types de sables: <br></p>
                         <li>sable issu du fleuve, parfait pour le BTP</li>
                         <li>Sable de remblais issu de de mer</li>
-                        <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
-                    </div>
+                        <a class="btn-slide mt-2" href="sables.html"><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
+                    </div>  
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item p-4">
@@ -223,10 +223,10 @@
                         </div>
                         <h4 class="mb-3">Produits concassés</h4>
                         <p>Nous vous conseillons lors de votre choix de graviers concassés jusqu'au début des travaux.</p>
-                        <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
+                        <a class="btn-slide mt-2" href="produits.html"><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.7s">
+                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.7s" style="text-align: justify;">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
                             <img class="img-fluid" src="img/service-3.jpg" alt="">
@@ -241,10 +241,10 @@
                             <strong style="color: blue;">Domaine d'application:</strong>
                             <li>Crépissage, Pose et joints des parpings et pièrres</li>
                             <li>Réalisation de couche de forme, charpe et joints des carreaux</li>
-                        <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
+                        <a class="btn-slide mt-2" href="ciments.html"><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s" style="text-align: justify;">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
                             <img class="img-fluid" src="img/service-4.jpg" alt="">
@@ -254,10 +254,10 @@
                         <p>Un service d'affrètement par conteneur pour l'acheminement des matériaux (ciment)</p>
                        <h6 style="color: blue;">Camion et TM</h6> 
                         <p>Un réseau de transport expérimenté au service de la clientèle</p>
-                        <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
+                        <a class="btn-slide mt-2" href="materiaux.html"><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s" style="text-align: justify;">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
                             <img class="img-fluid" src="img/service-5.jpg" alt="">
@@ -266,7 +266,7 @@
                         <li>Conseils techniques</li>
                         <li>Choix des matériaux adptés à vos projets</li>
                         <li>Prix au gros ou détails, autant de service que nous vous offrons pour mener à bien vos projets</li>
-                        <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
+                        <a class="btn-slide mt-2" href="materiaux.html"><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.7s">
@@ -275,7 +275,7 @@
                             <img class="img-fluid" src="img/service-6.jpg" alt="">
                         </div>
                         <h4 class="mb-3">Solutions d’entrepôt</h4>
-                        <p>Nous disposons d'un hangard adapté au stockage de matériaux au sein d'un site de 7000 m² non loin du centre ville</p>
+                        <p style="text-align: justify;">Nous disposons d'un hangard adapté au stockage de matériaux au sein d'un site de 7000 m² non loin du centre ville</p>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
@@ -286,12 +286,12 @@
 
 
     <!-- Feature Start -->
-    <div class="container-fluid overflow-hidden py-5 px-lg-0">
+    <div class="container-fluid overflow-hidden py-5 px-lg-0" style="text-align: justify;">
         <div class="container feature py-5 px-lg-0">
             <div class="row g-5 mx-lg-0">
                 <div class="col-lg-6 feature-text wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Nos caractéristiques</h6>
-                    <h5 class="mb-5" >Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br>
+                    <h5 class="mb-5" style="text-align: justify;">Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br>
                         Les défis d’une entreprise innovante : notre société est à votre service depuis 2020 et réinvente la vente et la distribution des matériaux de s dans la province !</h5>
                     <div class="d-flex mb-5 wow fadeInUp" data-wow-delay="0.3s">
                         <i class="fa fa-globe text-primary fa-3x flex-shrink-0"></i>
@@ -303,7 +303,7 @@
                                  </p>
                         </div>
                     </div>
-                    <div class="d-flex mb-5 wow fadeIn" data-wow-delay="0.5s">
+                    <div class="d-flex mb-5 wow fadeIn" data-wow-delay="0.5s" style="text-align: justify;">
                         <i class="fa fa-shipping-fast text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
                             <h5>Livraison à temps</h5>
@@ -311,7 +311,7 @@
                                 Nous associons nos capacités commerciales et notre expérience pour vous garantir une livraison rapide, un tarif avantageux et des travaux de qualité.</p>
                         </div>
                     </div>
-                    <div class="d-flex mb-0 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="d-flex mb-0 wow fadeInUp" data-wow-delay="0.7s" style="text-align: justify;">
                         <i class="fa fa-headphones text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
                             <h5>24/7 Assistance téléphonique</h5>
@@ -408,7 +408,7 @@
             <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="text-secondary text-uppercase mb-3">Obtenir un dévis</h6>
                 <h1 class="mb-5">Demander un Devis!</h1>
-                <p class="mb-5">Faites-nous parvenir vos commandes et notre service commerciale se chargera de vous proposer un devis personnalisé selon votre budget. </p>
+                <p class="mb-5" style="text-align: justify;">Faites-nous parvenir vos commandes et notre service commerciale se chargera de vous proposer un devis personnalisé selon votre budget. </p>
                 <div class="d-flex align-items-center">
                     <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
                     <div class="ps-4">
@@ -499,12 +499,12 @@
                     <div class="overflow-hidden mb-4">
                         <img class="img-fluid" src="img/team-1.jpg" alt="">
                     </div>
-                    <h5 class="mb-0">Mr Théophane BOUBEBE NDOUME</h5>
-                    <p>Manager</p>
+                    <h5 class="mb-0" style="text-align: center;">Mr Théophane BOUBEBE NDOUME</h5>
+                    <p style="text-align: center;">Manager</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
-                            <a href=""><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.facebook.com/theophane.boubebendoume"><i class="fab fa-facebook-f"></i></a>
                             <a href=""><i class="fab fa-twitter"></i></a>
                             <a href=""><i class="fab fa-instagram"></i></a>
                         </span>
@@ -514,10 +514,10 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="team-item p-4">
                     <div class="overflow-hidden mb-4">
-                        <img class="img-fluid" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid" src="img/team-3.jpg" alt="">
                     </div>
-                    <h5 class="mb-0">Mr Anatole OBAM</h5>
-                    <p>Associé</p>
+                    <h5 class="mb-0"style="text-align: center;">Mr Anatole OBAM</h5>
+                    <p style="text-align: center;">Associé</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
@@ -533,8 +533,8 @@
                     <div class="overflow-hidden mb-4">
                         <img class="img-fluid" src="img/team-3.jpg" alt="">
                     </div>
-                    <h5 class="mb-0">Mr Franck MOUSSAVOU</h5>
-                    <p>Associé</p>
+                    <h5 class="mb-0" style="text-align: center;">Mr Franck MOUSSAVOU</h5>
+                    <p style="text-align: center;">Associé</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
@@ -548,10 +548,10 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.9s">
                 <div class="team-item p-4">
                     <div class="overflow-hidden mb-4">
-                        <img class="img-fluid" src="img/team-4.jpg" alt="">
+                        <img class="img-fluid" src="img/team-3.jpg" alt="">
                     </div>
-                    <h5 class="mb-0">Mr Venceslas Baby  BYBAYA MOUSSOUNDA</h5>
-                    <p>Associé</p>
+                    <h5 class="mb-0" style="text-align: center;">Mr Venceslas Baby  BYBAYA MOUSSOUNDA</h5>
+                    <p style="text-align: center;">Associé</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
