--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <h1 class="mb-5">NOUS SOMMES A VOS CÔTES POUR TOUS VOS CHANTIERS DE BTP !</h1>
                     <p class="mb-5" style="text-align: justify;">Vous êtes à la recherche d’une entreprise pour la vente, la livraison de sable et de granulats, de ciment, 
                         des travaux d'ornement ou de constructions au Gabon ? <br> Notre entreprise vous propose du sable, du ciment  et d'autres matériaux adaptés à vos besoins à des coûts attractifs. <br><br>
-                    <strong style="color: blue;">Les défis d’une entreprise innovante : notre société est à votre service depuis 2023 et réinvente la vente et la distribution des matériaux de ss dans la province ! </strong> <br><br>
+                    <strong style="color: blue;">Les défis d’une entreprise innovante : notre société est à votre service depuis 2023 et réinvente la vente et la distribution des matériaux de constructions dans la province ! </strong> <br><br>
                         Notre organisation est composée d’une dizaine de partenaires  pour un accompagnement optimal dans vos commandes et sur vos chantiers. <br> 
                         Nous réalisons l’ensemble de vos commandes pour des travaux publics : des professionnels pour les professionnels. <br>
                     </p>
@@ -140,7 +140,7 @@
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
                             <i class="fa fa-shipping-fast fa-3x text-primary mb-3"></i>
                             <h5>Livraison à temps</h5>
-                            <p class="m-0">Rapidité du traitement de la commande et livraison à temps tout prêt de chez vous sont notre force</p>
+                            <p class="m-0">Rapidité du traitement de la commande et livraison à temps tout près de chez vous sont notre force</p>
                         </div>
                     </div>
                     <a href="livraison.html" class="btn btn-primary py-3 px-5">En savoir plus</a>
@@ -292,7 +292,7 @@
                 <div class="col-lg-6 feature-text wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Nos caractéristiques</h6>
                     <h5 class="mb-5" style="text-align: justify;">Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br>
-                        Les défis d’une entreprise innovante : notre société est à votre service depuis 2020 et réinvente la vente et la distribution des matériaux de s dans la province !</h5>
+                        Les défis d’une entreprise innovante : notre société est à votre service depuis 2023 et réinvente la vente et la distribution des matériaux de s dans la province !</h5>
                     <div class="d-flex mb-5 wow fadeInUp" data-wow-delay="0.3s">
                         <i class="fa fa-globe text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
@@ -314,7 +314,7 @@
                     <div class="d-flex mb-0 wow fadeInUp" data-wow-delay="0.7s" style="text-align: justify;">
                         <i class="fa fa-headphones text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
-                            <h5>24/7 Assistance téléphonique</h5>
+                            <h5>6Jrs/7 Assistance téléphonique</h5>
                             <p class="mb-0">Un numéro d'appel au service de tous nos clients pour répondre à toutes vos préoccupations</p>
                         </div>
                     </div>
@@ -491,7 +491,7 @@
     <div class="container py-5">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h6 class="text-secondary text-uppercase">Notre équipe</h6>
-            <h1 class="mb-5">Membres de l’équipe d’experts</h1>
+            <h1 class="mb-5">Membres de l’équipe </h1>
         </div>
         <div class="row g-4">
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -548,16 +548,16 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.9s">
                 <div class="team-item p-4">
                     <div class="overflow-hidden mb-4">
-                        <img class="img-fluid" src="img/team-3.jpg" alt="">
+                        <img class="img-fluid" src="img/wenceslas.jpg" alt="">
                     </div>
                     <h5 class="mb-0" style="text-align: center;">Mr Venceslas Baby  BYBAYA MOUSSOUNDA</h5>
                     <p style="text-align: center;">Associé</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
-                            <a href=""><i class="fab fa-facebook-f"></i></a>
-                            <a href=""><i class="fab fa-twitter"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100083340900197&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://x.com/BibayaWenceslas?t=CWmcQuGa1x3oUlTDrLKLwg&s=09"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/venceslaslinis?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a>
                         </span>
                     </div>
                 </div>
