--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BIKERE- Transport et Vente de matériaux de constructions</title>
+    <title>BIKERE- Transport et Vente de matériaux de construction</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -82,9 +82,9 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solutions de Transport et de Vente de matériaux de constructions</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">BIKERE, <span class="text-primary">Une centrale d'achats</span> innovante pour vos travaux de constructions</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2"> <span style="height: 35px;"> Assistance, Négoces, vente et transport de matériaux de constructions  pour les professionnels et les particuliers.</p></span>
+                                <h5 class="text-white text-uppercase mb-3 animated slideInDown" style="text-align: justify;">Solutions de Transport et de Vente de matériaux de construction</h5>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">BIKERE, <span class="text-primary">Une centrale d'achats</span> innovante pour vos travaux de construction</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2"> <span style="height: 35px;"> Assistance, Négoces, vente et transport de matériaux de construction  pour les professionnels et les particuliers.</p></span>
                                 <a href="materiaux.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
                                 <a href="quote.html" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis </a>
                             </div>
@@ -98,9 +98,9 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solution de Transport et de Ventede matériaux de constructions</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Une centrale d'achats</span> innovante pour vos travaux de constructions</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Assistance, Négoces, vente et transport de matériaux de constructions pour les professionnels et les particuliers.</p>
+                                <h5 class="text-white text-uppercase mb-3 animated slideInDown" style="text-align: center;">Solution de Transport des fretq</h5>
+                                <h1 class="display-3 text-white animated slideInDown mb-4" >Une centrale d'achats</span> innovante pour la logistique de vos frets</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Assistance, Négoces, vente et transport de matériaux de construction pour les professionnels et les particuliers.</p>
                                 <a href="transport.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
                                 <a href="quote.html" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis</a>
                             </div>
@@ -124,10 +124,10 @@
                 </div>
                 <div class="col-lg-6 about-text wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="text-secondary text-uppercase mb-3">A Propos de nous</h6>
-                    <h1 class="mb-5">NOUS SOMMES A VOS CÔTES POUR TOUS VOS CHANTIERS DE BTP !</h1>
+                    <h1 class="mb-5"style="text-align: justify;" >NOUS SOMMES A VOS CÔTES POUR TOUS VOS CHANTIERS DE BTP !</h1>
                     <p class="mb-5" style="text-align: justify;">Vous êtes à la recherche d’une entreprise pour la vente, la livraison de sable et de granulats, de ciment, 
-                        des travaux d'ornement ou de constructions au Gabon ? <br> Notre entreprise vous propose du sable, du ciment  et d'autres matériaux adaptés à vos besoins à des coûts attractifs. <br><br>
-                    <strong style="color: blue;">Les défis d’une entreprise innovante : notre société est à votre service depuis 2023 et réinvente la vente et la distribution des matériaux de constructions dans la province ! </strong> <br><br>
+                        des travaux d'ornement ou de construction au Gabon ? <br> Notre entreprise vous propose du sable, du ciment  et d'autres matériaux adaptés à vos besoins à des coûts attractifs. <br><br>
+                    <strong style="color: blue;">Les défis d’une entreprise innovante : notre société est à votre service depuis 2023 et réinvente la vente et la distribution des matériaux de construction dans la province ! </strong> <br><br>
                         Notre organisation est composée d’une dizaine de partenaires  pour un accompagnement optimal dans vos commandes et sur vos chantiers. <br> 
                         Nous réalisons l’ensemble de vos commandes pour des travaux publics : des professionnels pour les professionnels. <br>
                     </p>
@@ -291,8 +291,7 @@
             <div class="row g-5 mx-lg-0">
                 <div class="col-lg-6 feature-text wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Nos caractéristiques</h6>
-                    <h5 class="mb-5" style="text-align: justify;">Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br>
-                        Les défis d’une entreprise innovante : notre société est à votre service depuis 2023 et réinvente la vente et la distribution des matériaux de s dans la province !</h5>
+                    <h5 class="mb-5" style="text-align: justify;">Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br><br>
                     <div class="d-flex mb-5 wow fadeInUp" data-wow-delay="0.3s">
                         <i class="fa fa-globe text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
@@ -305,7 +304,7 @@
                     </div>
                     <div class="d-flex mb-5 wow fadeIn" data-wow-delay="0.5s" style="text-align: justify;">
                         <i class="fa fa-shipping-fast text-primary fa-3x flex-shrink-0"></i>
-                        <div class="ms-4">
+                        <div class="ms-4" style="text-align: justify;">
                             <h5>Livraison à temps</h5>
                             <p class="mb-0" style="text-align: justify;">Nous  accordons beaucoup d’importance à la satisfaction de nos clients.
                                 Nous associons nos capacités commerciales et notre expérience pour vous garantir une livraison rapide, un tarif avantageux et des travaux de qualité.</p>
@@ -314,7 +313,7 @@
                     <div class="d-flex mb-0 wow fadeInUp" data-wow-delay="0.7s" style="text-align: justify;">
                         <i class="fa fa-headphones text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
-                            <h5>6Jrs/7 Assistance téléphonique</h5>
+                            <h5>Assistance téléphonique Du Lundi au Samedi</h5>
                             <p class="mb-0">Un numéro d'appel au service de tous nos clients pour répondre à toutes vos préoccupations</p>
                         </div>
                     </div>
