--- a/about.html
+++ b/about.html
@@ -100,8 +100,8 @@
                 </div>
                 <div class="col-lg-6 about-text wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="text-secondary text-uppercase mb-3">A Propos de nous</h6>
-                    <h1 class="mb-5">NOUS SOMMES A VOS CÔTES POUR TOUS VOS CHANTIERS DE BTP !</h1>
-                    <p class="mb-5">Vous êtes à la recherche d’une entreprise pour la vente, la livraison de sable et de granulats, de ciment, 
+                    <h1 class="mb-5" style="text-align: justify;">NOUS SOMMES A VOS CÔTES POUR TOUS VOS CHANTIERS DE BTP !</h1>
+                    <p class="mb-5" style="text-align:justify;">Vous êtes à la recherche d’une entreprise pour la vente, la livraison de sable et de granulats, de ciment, 
                         des travaux d'ornement ou de construction dans l’Ogooué Maritime ? <br> Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br><br>
                     <strong style="color: blue;">Les défis d’une entreprise innovante : notre société est à votre service depuis 2023 et réinvente la vente et la distribution des matériaux de construction dans la province ! </strong> <br><br>
                         Notre organisation est composée d’une dizaine de partenaires  pour un accompagnement optimal dans vos commandes et sur vos chantiers. <br> 
@@ -111,12 +111,12 @@
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                             <i class="fa fa-globe fa-3x text-primary mb-3"></i>
                             <h5>Couverture nationale</h5>
-                            <p class="m-0">BIKERE Ambitionne à terme de tisser une communauté nationale de centrale d'achats dans les 9 provinces afin de servir au mieux sa clientèle en proposant la meilleure prestation au juste prix.</p>
+                            <p class="m-0" style="text-align:justify;">BIKERE Ambitionne à terme de tisser une communauté nationale de centrale d'achats dans les 9 provinces afin de servir au mieux sa clientèle en proposant la meilleure prestation au juste prix.</p>
                         </div>
                         <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
-                            <i class="fa fa-shipping-fast fa-3x text-primary mb-3"></i>
+                            <i class="fa fa-shipping-fast fa-3x text-primary mb-3"></i>s
                             <h5>Livraison à temps</h5>
-                            <p class="m-0">Rapidité du traitement de la commande et livraison à temps tout prêt de chez vous sont notre force</p>
+                            <p class="m-0" style="text-align:justify;">Rapidité du traitement de la commande et livraison à temps tout prêt de chez vous sont notre force</p>
                         </div>
                     </div>
                     <a href="" class="btn btn-primary py-3 px-5">En savoir plus</a>
@@ -218,12 +218,12 @@
     <!-- Feature End -->
 
 
-   <!-- Team Start -->
-   <div class="container-xxl py-5">
+  <!-- Team Start -->
+  <div class="container-xxl py-5">
     <div class="container py-5">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h6 class="text-secondary text-uppercase">Notre équipe</h6>
-            <h1 class="mb-5">Membres de l’équipe d’experts</h1>
+            <h1 class="mb-5">Membres de l’équipe </h1>
         </div>
         <div class="row g-4">
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -231,12 +231,12 @@
                     <div class="overflow-hidden mb-4">
                         <img class="img-fluid" src="img/team-1.jpg" alt="">
                     </div>
-                    <h5 class="mb-0">Mr Théophane BOUBEBE NDOUME</h5>
-                    <p>Manager</p>
+                    <h5 class="mb-0" style="text-align: center;">Mr Théophane BOUBEBE NDOUME</h5>
+                    <p style="text-align: center;">Manager</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
-                            <a href=""><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.facebook.com/theophane.boubebendoume"><i class="fab fa-facebook-f"></i></a>
                             <a href=""><i class="fab fa-twitter"></i></a>
                             <a href=""><i class="fab fa-instagram"></i></a>
                         </span>
@@ -246,10 +246,10 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="team-item p-4">
                     <div class="overflow-hidden mb-4">
-                        <img class="img-fluid" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid" src="img/team-3.jpg" alt="">
                     </div>
-                    <h5 class="mb-0">Mr Anatole OBAM</h5>
-                    <p>Associé</p>
+                    <h5 class="mb-0"style="text-align: center;">Mr Anatole OBAM</h5>
+                    <p style="text-align: center;">Associé</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
@@ -265,8 +265,8 @@
                     <div class="overflow-hidden mb-4">
                         <img class="img-fluid" src="img/team-3.jpg" alt="">
                     </div>
-                    <h5 class="mb-0">Mr Franck MOUSSAVOU</h5>
-                    <p>Associé</p>
+                    <h5 class="mb-0" style="text-align: center;">Mr Franck MOUSSAVOU</h5>
+                    <p style="text-align: center;">Associé</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
@@ -280,16 +280,16 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.9s">
                 <div class="team-item p-4">
                     <div class="overflow-hidden mb-4">
-                        <img class="img-fluid" src="img/team-4.jpg" alt="">
+                        <img class="img-fluid" src="img/wenceslas.jpg" alt="">
                     </div>
-                    <h5 class="mb-0">Mr Venceslas Baby  BYBAYA MOUSSOUNDA</h5>
-                    <p>Associé</p>
+                    <h5 class="mb-0" style="text-align: center;">Mr Venceslas Baby  BYBAYA MOUSSOUNDA</h5>
+                    <p style="text-align: center;">Associé</p>
                     <div class="btn-slide mt-1">
                         <i class="fa fa-share"></i>
                         <span>
-                            <a href=""><i class="fab fa-facebook-f"></i></a>
-                            <a href=""><i class="fab fa-twitter"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100083340900197&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://x.com/BibayaWenceslas?t=CWmcQuGa1x3oUlTDrLKLwg&s=09"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/venceslaslinis?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a>
                         </span>
                     </div>
                 </div>
