--- a/sables.html
+++ b/sables.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BIKERE- Transport et Vente de matériaux de constructions</title>
+    <title>BIKERE- Transport et Vente de matériaux de construction</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -82,9 +82,9 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solutions de Transport et de Vente de matériaux de constructions</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">BIKERE, <span class="text-primary">Une centrale d'achats</span> innovante pour vos travaux de constructions</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2"> <span style="height: 35px;"> Assistance, Négoces, vente et transport de matériaux de constructions  pour les professionnels et les particuliers.</p></span>
+                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solutions de Transport et de Vente de matériaux de construction</h5>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">BIKERE, <span class="text-primary">Une centrale d'achats</span> innovante pour vos travaux de construction</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2"> <span style="height: 35px;"> Assistance, Négoces, vente et transport de matériaux de construction  pour les professionnels et les particuliers.</p></span>
                                 <a href="transport.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
                                 <a href="quote.html" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis </a>
                             </div>
@@ -98,9 +98,9 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solution de Transport et de Ventede matériaux de constructions</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Une centrale d'achats</span> innovante pour vos travaux de constructions</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Assistance, Négoces, vente et transport de matériaux de constructions pour les professionnels et les particuliers.</p>
+                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solution de Transport et de Ventede matériaux de construction</h5>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Une centrale d'achats</span> innovante pour vos travaux de construction</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Assistance, Négoces, vente et transport de matériaux de construction pour les professionnels et les particuliers.</p>
                                 <a href="transport.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
                                 <a href="quote.html" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis</a>
                             </div>
