ajoute de la photo de anatole

--- a/about.html
+++ b/about.html
@@ -246,7 +246,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="team-item p-4">
                     <div class="overflow-hidden mb-4">
-                        <img class="img-fluid" src="img/team-3.jpg" alt="">
+                        <img class="img-fluid" src="img/Anatole.png" alt="">
                     </div>
                     <h5 class="mb-0"style="text-align: center;">Mr Anatole OBAM</h5>
                     <p style="text-align: center;">Associé</p>
