--- a/sables.html
+++ b/sables.html
@@ -237,7 +237,7 @@
                 <h4 class="text-light mb-4">Adresse</h4>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Matanda, Port-Gentil, GA</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+241 773 908 01">+241 773 908 01</a></p>
-                <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.com</p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@bikere.org</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
