--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
-            <span class="sr-only">Chargement...</span>
+            <span class="sr-only">kikere.org</span>
         </div>
     </div>
     <!-- Spinner End -->
@@ -263,7 +263,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                 <div class="team-item p-4">
                     <div class="overflow-hidden mb-4">
-                        <img class="img-fluid" src="img/team-3.jpg" alt="">
+                        <img class="img-fluid" src="img/Franck.png" alt="">
                     </div>
                     <h5 class="mb-0" style="text-align: center;">Mr Franck MOUSSAVOU</h5>
                     <p style="text-align: center;">Associé</p>
