--- a/quote.html
+++ b/quote.html
@@ -33,9 +33,9 @@
 
 <body>
     <!-- Spinner Start -->
-   <!-- <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+   <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
-            <span class="sr-only">Chargement...</span>
+            <span class="sr-only">bikere.org</span>
         </div>
     </div>
     <!-- Spinner End -->
